--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ style="background:linear-gradient(white,pink,LightBlue);
 height:200px; width:200px; float:left;">
 <font style="color:black">
 <b>🌹สารบัญ🌹</b> <br>
-👉🏻บทนำ 😎<br>
+<a href="bodnum.html">👉🏻บทนำ 😎<br>
 👉🏻หัวข้อหลักของนิทรรศการ🤠<br>
 👉🏻กิจกรรมและการแสดง🎈<br>
 👉🏻ผลงานของนักเรียน👦🏻<br>
